k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cleanarch-prod
  labels:
    name: cleanarch-prod
    environment: production
