k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanarch-api-svc
  namespace: cleanarch-prod
spec:
  type: ClusterIP
  selector:
    app: cleanarch-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
